openoffice-base-beta 3.0-ooo300_m4-1
- use gzip compression for cvs, much faster
- --disable-reportdesign extion build

openoffice-base-beta 3.0-ooo300_m3-1
- new snapshot
- fixed buildfix-gcc43.diff

openoffice-base-beta 3.0-ooo300_m2-1
- switch to cvs checkouts for faster access

openoffice-base-beta 3.0-ooo300_m1-1
- next snapshot
- fix beta renaming #11134
- --disable-qadevooo due to
  http://www.openoffice.org/issues/show_bug.cgi?id=91452

openoffice-base-beta 3.0-beb300_m3-1
- beta3
- drop kde support
- built with openjdk
- install along stable and devel version
- drop binfilter support

openoffice-base 2.4.1-1
- try shell.patch to non-gtk solve integration
- disable crashdump that would break with gcc-4.3
- use system Xrender-headers and sane headers again
- cleanup deps/makedeps

openoffice-base 2.4.0-1
- rebuild against extra
- rc6 is final

openoffice-base 2.4.0-0.4
- ooh680-m12 = 2.4 RC6
- fix gcc-4.3 compile issues
- fix gcj lib paths

openoffice-base 2.4.0-0.3
- ooh680-m9 = 2.4 RC3

openoffice-base 2.4.0-0.2
- ooh680-m8 = 2.4 RC2
- added soffice.diff to solve OOo not stating in certain DEs (#9638)

openoffice-base 2.4.0-0.1
- ooh680-m7 = 2.4 RC1
- remove gstreamer patch that breaks letter wizard on x86_64
- removed Arch splash
- removed obsolete patches
- added gtk-printing patch to provide the nice dialog on gtk based desktops

openoffice-base 2.3.1-1
- remove broken --without-stlport4 option for i686

openoffice-base 2.3.1-0.1
- make use of !emptydir
- adopt patch changes from devel pkg src680_m236
- prepare 2.3.1 release - this is rc1

openoffice-base 2.3.0-4
- fixed weird gtk behavior - http://bugs.archlinux.org/task/8209
- added missing spell wizard
- removed system agg dependency due to license issues 
  see http://www.openoffice.org/issues/show_bug.cgi?id=81224
- removed unneeded provide tag
- added ChangeLog