@@ -1,3 +1,6 @@
+openoffice-base-beta 3.0-ooo300_m5-1
+- next snapshot
+
 openoffice-base-beta 3.0-ooo300_m4-1
 - use gzip compression for cvs, much faster
 - --disable-reportdesign extion build
